fix: payment and delivery cell overflow fix
https://jira.railsc.ru/browse/GOODS-2614
https://jira.railsc.ru/browse/GOODS-2623

--- a/src/Dialog/rc-dialog.scss
+++ b/src/Dialog/rc-dialog.scss
@@ -181,7 +181,7 @@
       margin: 0 0 18px;
       line-height: 1.42;
       font-family: OpenSans;
-      font-size: 24px;
+      font-size: 22px;
       font-weight: 600;
     }
     & #{$root}-header {
